package behavioral.observer.tigia;

public interface ThayDoiTiGia {
    void capNhat(float delta);
}
