@startuml
'https://plantuml.com/class-diagram

interface ThayDoiTiGia{
    +void capNhat(float delta)
}
class TiGia{
    + void attach(ThayDoiTiGia o)
    + void detach(ThayDoiTiGia o)
    + void notify(float delta)
}
class NhaDauTuA
class NhaDauTuB

ThayDoiTiGia <|-- NhaDauTuA
ThayDoiTiGia <|-- NhaDauTuB

TiGia o--> "observer" ThayDoiTiGia
NhaDauTuA --> TiGia
NhaDauTuB --> TiGia
@enduml